# TEDI.beautify

./: .gitignore  CHANGELOG.md  README.md  build.mjs  extension.js  manifest.json  package-lock.json  package.json
.github/workflows/: release.yml
sidecar-src/: Cargo.toml
sidecar-src/src/: main.rs
src/: dom.js  format.js  header.js  index.js  lang.js  runtime.js  sidecar.js
